# EmulatorFreighter

./: .gitignore  CMakeLists.txt  CustomButton.cpp  CustomButton.h  EmulatorFreighter.h  EmulatorFreighter.pro  EmulatorFreighter_resource.rc  Makefile  Makefile.Debug  Makefile.Release  README.md  Scrape.h  functions.h  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  quickScanner.h  scrapeIGDB.c  scrapeIGDB.py  settings.cpp  settings.h  settings.ui  structures.h  ui_dialog.h  ui_mainwindow.h
PythonWebScrapers/: scrapeCemu.py  scrapeEmulator.py  scrapeEmulator.py.autosave  scrapeIGDB.py  test.py
Release/: EmulatorFreighter_resource.rc  Makefile  Makefile.Debug  Makefile.Release
Release/release/: moc_mainwindow.cpp
config/images/: cf.eps
